--- a/src/components/BookingTabs/BookingTabs.module.scss
+++ b/src/components/BookingTabs/BookingTabs.module.scss
@@ -4,9 +4,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.5rem 5rem;
+  padding: 1rem 5rem;
   font-size: 1.25rem;
   background-color: $main-background-color;
   color: $color-dark-green;
-  height: 1000px;
+
+  .tabs {
+    width: 100%;
+  }
 }
