--- a/src/pages/SignUpPage/SignUpPage.module.scss
+++ b/src/pages/SignUpPage/SignUpPage.module.scss
@@ -53,10 +53,18 @@
     &Header {
       text-align: center;
       color: $primary-color;
+      font-size: 1.5rem;
       margin-bottom: 20px;
     }
 
     &Content {
+      a {
+        color: $primary-color;
+      }
+    }
+
+    &Button {
+      margin: 0.5rem 0;
     }
   }
 }
