✨ feat: add authentication feature

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -93,7 +93,7 @@
   }
 
   .navItem {
-    // color: $color-dark-green;
+    color: $color-dark-green;
     font-family: "Roboto", sans-serif;
     font-size: 1.25rem;
   }
