--- a/src/components/PaymentCard/PaymentCard.module.scss
+++ b/src/components/PaymentCard/PaymentCard.module.scss
@@ -5,14 +5,21 @@
   justify-content: space-between;
   align-items: center;
   background-color: $color-white;
-  padding: 0.5rem 5rem;
-  border-radius: 1.5rem;
+  padding: 1rem 3rem;
+  border-radius: 1rem;
   border-color: $color-bright-green;
   box-shadow: 0px 4px 10px rgba(14, 134, 44, 0.7);
+  margin-bottom: 2rem;
+  font-size: 1rem;
   //   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.15);
 
+  &.defaultCard {
+    // box-shadow: 0 4px 8px rgba(0, 128, 0, 0.2); // Example shadow for default card
+    border: 2px solid #0e862c; // Optional: add a border for the default card
+  }
+
   &ImageContainer {
-    width: 20%;
+    width: 7%;
 
     .cardImage {
       width: 100%;
@@ -24,5 +31,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+
+  &Element {
+    .title {
+      color: $color-neutral-gray;
+    }
   }
 }
